<?xml version="1.0"?>
<package>
  <name>marmorf_description</name>
  <version>0.1.0</version>
  <description>MiiVii marmorf URDF description</description>

  <author email="juns@miivii.com">Jun Su</author>

  <maintainer email="juns@miivii.com">Jun Su</maintainer>

  <url type="website">http://www.miivii.com</url>
  <url type="bugtracker">https://github.com/MiiViiDynamics/marmorf/issues</url>
  <url type="repository">https://github.com/MiiViiDynamics/marmorf</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rplidar_ros</run_depend>


  <export>
  </export>
</package>
