<?xml version="1.0"?>
<package>
  <name>marmorf_navigation</name>
  <version>0.2.7</version>
  <description>Autonomous mapping and navigation demos for the Clearpath Husky</description>

  <author email="juns@miivii.com">Jun Su</author>
  <maintainer email="juns@miivii.com">Jun Su</maintainer>

  <url type="website">http://www.miivii.com</url>

  <license>BSD</license>

  <url type="website">http://www.miivii.com</url>
  <url type="bugtracker">https://github.com/MiiViiDynamics/marmorf/issues</url>
  <url type="repository">https://github.com/MiiViiDynamics/marmorf</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
