<?xml version="1.0"?>
<package>
  <name>marmorf_sensing</name>
  <version>0.2.7</version>
  <description>MiiVii marmorf controller configurations</description>

  <author email="juns@miivii.com">Jun Su</author>

  <maintainer email="juns@miivii.com">Jun Su</maintainer>

  <license>BSD</license>

  <url type="website">http://www.miivii.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
